added blogs section

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader Bord</title>
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <!-- custom  css-->
     <link rel="stylesheet" href="./css/style.css">
+
 </head>
 <body>
     <!-- header -->
@@ -15,7 +20,7 @@
     <main>
         <section class="container">
             <article class="top-players">
-                <h2 class="top-player-title">Top Player</h2>
+                <h2 class="top-title">Top Player</h2>
                 <div class="players">
                     <div class="player">
                         <img src="./images/players/player-1.png" alt="">
@@ -23,26 +28,74 @@
                     </div>
                     <div class="player">
                         <img src="./images/players/player-2.png" alt="">
-                        <h3>John Smith</h3>
+                        <h3>Pro Rasel</h3>
                     </div>
                     <div class="player">
                         <img src="./images/players/player-3.png" alt="">
-                        <h3>John Smith</h3>
+                        <h3>Abu Sufian</h3>
                     </div>
                     <div class="player">
                         <img src="./images/players/player-4.png" alt="">
-                        <h3>John Smith</h3>
+                        <h3>Maruf Ahmed</h3>
                     </div>
                     <div class="player">
                         <img src="./images/players/player-5.png" alt="">
-                        <h3>John Smith</h3>
+                        <h3>Shajedul Karim</h3>
                     </div>
                     <div class="player">
                         <img src="./images/players/player-6.png" alt="">
                         <h3>John Smith</h3>
                     </div>
                 </div>
+                <hr>
+                <!-- top blog section -->
+                <article class="top-blogs">
+                    <h2 class="top-title">Top Player</h2>
+                    <div class="blogs">
+                        <div class="blog">
+                            <div class="blog-img">
+                                <img src="./images/blogs/blog-1.png" alt="blog-1">
+                            </div>
+                            <div class="blog-info">
+                                <h3>13 of My Favorite
+                                    UI/UX Goodies</h3>
+                                    <p><span class="by">By</span> Danny Sapio</p>
+                            </div>
+                        </div>
+                        <div class="blog">
+                            <div class="blog-img">
+                                <img src="./images/blogs/blog-2.png" alt="blog-1">
+                            </div>
+                            <div class="blog-info">
+                                <h3>13 of My Favorite
+                                    UI/UX Goodies</h3>
+                                    <p><span class="by">By</span> Danny Sapio</p>
+                            </div>
+                        </div>
+                        <div class="blog">
+                            <div class="blog-img">
+                                <img src="./images/blogs/blog-3.png" alt="blog-1">
+                            </div>
+                            <div class="blog-info">
+                                <h3>13 of My Favorite
+                                    UI/UX Goodies</h3>
+                                    <p><span class="by">By</span> Danny Sapio</p>
+                            </div>
+                        </div>
+                        <div class="blog">
+                            <div class="blog-img">
+                                <img src="./images/blogs/blog-4.png" alt="blog-4">
+                            </div>
+                            <div class="blog-info">
+                                <h3>UI cheat sheet: 
+                                    list vs grids</h3>
+                                    <p><span class="by">By</span> By Tess Gadd</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
             </article>
+          
         </section>
     </main>
     <footer>
